# ai-web

./: .dockerignore  .env-example  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  1339404178ce_initial_migration.py  9c0a54914c1f_add_chat_sessions.py
app/: __init__.py  config.py  main.py
app/api/: chat.py  classify.py  deps.py  health.py  sessions.py  tasks.py  users.py
app/core/: config.py  errors.py  lifespan.py  logging.py
app/database/: database.py
app/db/: base.py  models.py  session.py
app/ml/: factory.py  interface.py  local_onnx.py  mock.py  openrouter.py
app/ml_model/: llm_interface.py  ml_model.py  openrouter_llm.py
app/models/: models.py
app/routers/: router.py
app/schemas/: schemas.py
app/tasks/: celery_app.py  chat_tasks.py
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
grafana/provisioning/dashboards/: api_overview.json  dashboards.yml
prometheus/: prometheus.yml
scripts/: train_local_model.py
tests/: test_schemas.py
ui/: api_client.py  app.py
