[project]
name = "ai-web"
version = "1.0.0"
description = "AI Chat Service: FastAPI + Celery + PostgreSQL + Streamlit + Nginx + Prometheus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    # DB
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.1.0",
    # HTTP
    "httpx[http2]>=0.27.0",
    # Async queue
    "celery>=5.4.0",
    "redis>=5.1.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # ML (local ONNX model)
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
    # UI
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    # Utilities
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
train = [
    "scikit-learn>=1.5.0",
    "skl2onnx>=1.17.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
